--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API_KEY = Hu1HPlEXvMprEBQoQwE0MW0nO
-API_SECRET_KEY = I2iKUOYV6Rpvr37lHg9690mMSHL4JwbivLZjYxUuO5p6HUBw5b
-ACCESS_TOKEN = 753056228205551616-g8VHOJAlt2DMkZywlu5Qky3OUaYj3Ym
-ACCESS_TOKEN_SECRET = Q7N6zvHC5UxlK0obQRgaC5nbTdtZSUatHa47H3MZ0jMDP
-BEARER_TOKEN = AAAAAAAAAAAAAAAAAAAAAOdYLwEAAAAAglfM6PvLtPqEnEFgtA24BpzUpXk%3DYnh0HTmQ4bXO6LZTUsCxthLZXOaxk7T5P6Oysocc6Vk1sojk8H
+API_KEY = u75FCbXchVmaqv0ygKLaZaMA6
+API_SECRET_KEY = EkSAgLH3MQSTctER5Wj2vAAdoO3g6ayRl160aEueLYvLPuPtcG
+ACCESS_TOKEN = 1350511309138386953-RldR6hS4OeJJmYnkIfobaT3EI8Do6l
+ACCESS_TOKEN_SECRET = y3OcGO6iCZaAY3fIOb6KSvPSwMwu1ICCVX1gTdBsh72jb
+BEARER_TOKEN = AAAAAAAAAAAAAAAAAAAAAIxjLwEAAAAAi%2FHjR953GqhTjun%2FJDKphcmY9%2FA%3D2xyzyx0CPkPq8F2qE3mvy9txPYu8wAGkpifOfvg6dr3YXUDU0m
