--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     },
     "dependencies": {
         "dotenv": "^8.2.0",
+        "fs": "^0.0.1-security",
         "node-schedule": "^1.3.2",
         "random-item": "^3.1.0",
         "twit": "^2.2.11"
-  }
+    }
 }
